<resources>
    <string name="app_name">MedBrain</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="crearReceta">Crear nueva receta</string>
    <string name="button_addUser">Agregar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="name_message">Nombre</string>
    <string name="last_name_message">1er Apellido</string>
    <string name="last_name_2_message">2do Apellido</string>
    <string name="Bdate">dd/mm/aaaa</string>
    <string name="Fecha_Nac">Fecha de nacimiento: </string>
    <string name="ID_num">Identificación</string>
    <string name="button_createUser">Crear</string>
    <string name="button_Users">Perfiles</string>
    <string name="title_activity_users_view">Perfiles</string>
    <string name="title_activity_add_new_user">Nuevo usuario</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_prescription_creation">PrescriptionCreationActivity</string>
    <string name="title_crearReceta">Crear Receta</string>
    <string name="medicinas">Medicinas:</string>
    <string name="crear_medicina">Crear nueva medicina</string>
    <string name="medico">Medico:</string>
    <string name="add_medicine">Agregar medicina</string>
    <string name="button_Editar">Editar</string>
    <string name="button_CambiarUsuario">Cambiar perfil</string>
    <string name="button_Guardar">Guardar</string>
    <string name="button_Eliminar">Eliminar</string>

    <string name="button_Contacts">Contactos</string>
    <string name="button_addContact">Agregar Contacto</string>
    <string name="button_createContact">CrearContacto</string>
    <string name="title_activity_contacts_view">Contactos Medicos</string>
    <string name="title_activity_contact_view">Contacto Medico</string>
    <string name="title_activity_add_new_contact">Nuevo Contacto</string>
    <string name="title_activity_contacts_edition">Contacto Medico</string>

    <string name="title_activity_calendar">Calendario</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="calendar_button">Calendario</string>
    <string name="title_activity_add_new_app">Agregar Cita</string>
    <string name="title_activity_add_new_rmdr">Agregar Recordatorio</string>

    <string name="appointment_title">Nombre cita</string>
    <string name="appointment_place">Lugar de la cita</string>
    <string name="appointment_doctor">Doctor encargado</string>
    <string name="appointment_date">Fecha</string>
    <string name="title_activity_med_selection">MedSelectionActivity</string>
    <string name="crear_med">Crear medicina</string>
    <string name="seleccionar_med">Escoger medicina de una lista</string>
    <string name="title_activity_prescription_view">PrescriptionViewActivity</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="title_activity_user_info">UserInfo</string>
    <string name="title_activity_edit_user_info">EditUserInfo</string>

    <string name="button_addAppointment">Crear Cita</string>
    <string name="button_addReminder">Crear Recordatorio</string>
    <string name="rmdr_title">Texto para recordar</string>
    <string name="title_activity_login">MedBrain Login</string>
    <string name="welcome_screen">Bienvenido a MedBrain!</string>
    <string name="crear_usuario">Crear nuevo usuario</string>

</resources>
