<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.medbrain.fuzzy.medbrain.AddNewApp"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText12"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="123dp"
        android:hint="@string/appointment_title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText13"
        android:layout_below="@+id/editText12"
        android:layout_alignStart="@+id/editText12"
        android:hint="@string/appointment_place" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText14"
        android:layout_below="@+id/editText13"
        android:layout_alignStart="@+id/editText13"
        android:hint="@string/appointment_doctor" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText15"
        android:layout_below="@+id/editText14"
        android:layout_alignStart="@+id/editText14"
        android:hint="@string/appointment_date" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_add_new_app"
        android:id="@+id/button7"
        android:onClick="saveData"
        android:layout_below="@+id/editText15"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp" />

</RelativeLayout>
