<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crearReceta"
        android:id="@+id/crearRecetaBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="com.medbrain.fuzzy.medbrain.MyListFragment"
        android:id="@+id/MyFragment"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Users"
        android:onClick="jumpToUsers"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Contacts"
        android:onClick="jumpToContacts"
        android:id="@+id/button4"
        android:layout_marginBottom="86dp"
        android:layout_above="@+id/button2"
        android:layout_alignEnd="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendar_button"
        android:id="@+id/button6"
        android:onClick="jumpToAddAppointment"
        android:layout_marginBottom="37dp"
        android:layout_above="@+id/button2"
        android:layout_alignEnd="@+id/button4" />
</RelativeLayout>
