<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.medbrain.fuzzy.medbrain.AddNewUser">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginStart="34dp"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        android:autoText="false"
        android:hint="@string/name_message" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginTop="27dp"
        android:hint="@string/last_name_message" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_marginTop="25dp"
        android:hint="@string/last_name_2_message"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/editText2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_createUser"
        android:id="@+id/button"
        android:onClick="saveData"
        android:layout_marginBottom="24dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText6"
        android:hint="@string/ID_num"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/editText3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Fecha_Nac"
        android:id="@+id/textView"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/editText6"
        android:layout_alignStart="@+id/editText6" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_toStartOf="@+id/button"
        android:hint="  dd"
        android:layout_marginRight="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView11"
        android:hint="/"
        android:linksClickable="false"
        android:ellipsize="none"
        android:focusable="false"
        android:height="30dp"
        android:layout_alignBottom="@+id/editText4"
        android:layout_alignEnd="@+id/editText4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText11"
        android:hint="mm"
        android:layout_marginRight="220dp"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/textView11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView12"
        android:hint="/"
        android:linksClickable="false"
        android:ellipsize="none"
        android:focusable="false"
        android:height="30dp"
        android:layout_alignBottom="@+id/editText11"
        android:layout_alignStart="@+id/button" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText12"
        android:hint="aaaa"
        android:layout_marginRight="155dp"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/textView12" />

</RelativeLayout>
