<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.medbrain.fuzzy.medbrain.AddNewAppointment">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText16"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/appointment_title" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText17"
        android:layout_below="@+id/editText16"
        android:layout_alignParentStart="true"
        android:hint="@string/appointment_place" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText18"
        android:layout_below="@+id/editText17"
        android:layout_alignParentStart="true"
        android:hint="@string/appointment_doctor" />

    <com.medbrain.fuzzy.medbrain.CustomDatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:id="@+id/datePicker3"
        android:layout_below="@+id/editText18"
        android:layout_centerHorizontal="true" />

    <com.medbrain.fuzzy.medbrain.CustomTimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker3"
        android:layout_below="@+id/datePicker3"
        android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="¿Cuántas horas antes recordar?"
                android:id="@+id/textView4"
                android:layout_below="@+id/timePicker3"
                android:layout_centerHorizontal="true" />

            <com.medbrain.fuzzy.medbrain.CustomNumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numberPicker"
                android:layout_below="@+id/textView4"
                android:layout_centerHorizontal="true"
                max="100"
                min="0"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_addAppointment"
        android:id="@+id/button7"
        android:onClick="saveData"
        android:layout_below="@+id/numberPicker"
        android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
